--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -1,7 +1,5 @@
 target_sources(taller_server
     PRIVATE
-    # .cpp files
     main.cpp
-    PUBLIC
-    # .h files
-    )
+)
+add_subdirectory(model physics logic config)
