Configurar CMake para cliente Qt6 y main.cpp
- Definir archivos fuente

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -2,6 +2,16 @@ target_sources(taller_client
     PRIVATE
     # .cpp files
     main.cpp
+    lobby_window.cpp
+    create_game_dialog.cpp
+    car_selection_dialog.cpp
+    lobby_client.cpp
+    theme_manager.cpp
     PUBLIC
     # .h files
+    lobby_window.h
+    create_game_dialog.h
+    car_selection_dialog.h
+    lobby_client.h
+    theme_manager.h
     )
