base for server and client, tested protocol core

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,6 +26,8 @@ repos:
           "--inline-suppr",
           "-Dslots=",
           "--enable=all",
+          "--include=src/common/macros.h",
+          "--include=src/common/dto/macros.inl",
           "--suppress=missingIncludeSystem",
           "--suppress=normalCheckLevelMaxBranches",
           "--suppress=missingInclude",
