--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -1,7 +1,11 @@
+add_subdirectory(game)
+add_subdirectory(qt)
+add_subdirectory(connexion)
+
 target_sources(taller_client
-    PRIVATE
-    # .cpp files
-    main.cpp
-    PUBLIC
-    # .h files
-    )
+        PRIVATE
+        main.cpp
+        app.cpp
+        PUBLIC
+        app.h
+)
