--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -1,7 +1,17 @@
+add_subdirectory(client_handler)
+add_subdirectory(session)
+
 target_sources(taller_server
-    PRIVATE
-    # .cpp files
-    main.cpp
-    PUBLIC
-    # .h files
-    )
+        PRIVATE
+        main.cpp
+        PRIVATE
+        acceptor.cpp
+        clients_manager.cpp
+        server.cpp
+        sessions_monitor.cpp
+        PUBLIC
+        acceptor.h
+        clients_manager.h
+        server.h
+        sessions_monitor.h
+)
