--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -1,8 +1,19 @@
+add_subdirectory(dto)
+
 target_sources(taller_common
-    PRIVATE
-    # .cpp files
-    foo.cpp
-    PUBLIC
-    # .h files
-    foo.h
-    )
+        PRIVATE
+        protocol.cpp
+        resolver.cpp
+        resolvererror.cpp
+        socket.cpp
+        PUBLIC
+        buffer.h
+        emitter.h
+        liberror.h
+        protocol.h
+        queue.h
+        resolver.h
+        resolvererror.h
+        socket.h
+        thread.h
+)
