client connect to server via command

--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -5,7 +5,9 @@ add_subdirectory(connexion)
 target_sources(taller_client
         PRIVATE
         main.cpp
+        args_parser.cpp
         app.cpp
         PUBLIC
+        args_parser.cpp
         app.h
 )
