--- a/editor/CMakeLists.txt
+++ b/editor/CMakeLists.txt
@@ -2,6 +2,14 @@ target_sources(taller_editor
     PRIVATE
     # .cpp files
     main.cpp
+    editor_window.cpp
+    checkpoint_item.cpp
+    hint_item.cpp
+    map_canvas.cpp
     PUBLIC
     # .h files
+    editor_window.h
+    checkpoint_item.h
+    hint_item.h
+    map_canvas.h
     )
