Modularizacion preliminar de Game (sin precommit)

--- a/src/client/game/CMakeLists.txt
+++ b/src/client/game/CMakeLists.txt
@@ -4,9 +4,11 @@ target_sources(taller_client
         game.cpp
         input_handler.cpp
         sdl_app.cpp
+        assets.cpp
         PUBLIC
         # .h files
         game.h
         input_handler.h
         sdl_app.h
+        assets.h
 )
