--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -2,4 +2,7 @@ target_sources(taller_server
     PRIVATE
     main.cpp
 )
-add_subdirectory(model physics logic config)
+add_subdirectory(model)
+add_subdirectory(physics)
+add_subdirectory(logic)
+add_subdirectory(config)
