base para mock_connexion_controller
Para este commit, si se quiere centrar en qt, recomiendo ignorar el codigo dentro de src/client/connexion, ya que es parte del protocolo y no debería importar para qt.
Lo más importante, para la parte de qt, es que se deben implementar metodos publicos para que el protocolo se comunique con cada ventana por separado y utilizar los metodos (a medida que esten disponibles) de connexionController para enviar peticiones al servidor. En caso de no haber las peticiones deseadas, escribir un comentario con algún tag para posteriormente que se haga y se reemplace la línea

## Nombres cambiados

create_game_dialog -> creating_window
lobby_window -> searching_window
car_selection_dialog -> selecting_window
waiting_room_widget -> waiting_window

Esto para que cada ventana tenga su controlador con su nombre claro: creating_controller, searching_controller, selecting_controller y waiting_controller

## movido structs de qt a common/structs.h

Aprovecho estas estructuras para mandarlas directamente por socket por medio de los wrappers de common/dto y ser usadas tanto por el cliente como por el servidor
Quito estructuras de Qt como QString porque el servidor no tiene Qt
Utilizo enum para el estado de session

## MockConnexionController

Se comentó todo lo relacionado con LobbyClient, implementacion de la conexion por el cliente no contemplada en el armado de la estructura inicial y se reemplazó por MockConnexionController con una minima implementacion de request_all_sessions para comprobar su correcto funcionamiento
En futuros commits se debe añadir más metodos públicos en las clases para ser llamados por los controladores a medida que estos reciban mensajes (como el ya hecho `updateGamesList` en SearchingWindow), además de avisar para que se conecte correctamente con el MockConnexionController
También a medida que se quiera hacer peticiones se debera pedir para que se implementen los metodos que las realizan, como el ya hecho `request_all_sessi

--- a/src/client/connexion/CMakeLists.txt
+++ b/src/client/connexion/CMakeLists.txt
@@ -1,20 +1,20 @@
+add_subdirectory(controllers)
+
 target_sources(taller_client
         PRIVATE
         # .cpp files
+        mock_connexion_controller.cpp
         connexion_controller.cpp
         receiver.cpp
         sender.cpp
         response_controller.cpp
-        browser_controller.cpp
-        lobby_controller.cpp
-        game_controller.cpp
+        request_controller.cpp
         PUBLIC
         # .h files
+        mock_connexion_controller.h
         connexion_controller.h
         receiver.h
         sender.h
         response_controller.h
-        browser_controller.h
-        lobby_controller.h
-        game_controller.h
+        request_controller.h
 )
