--- a/src/client/qt/windows/CMakeLists.txt
+++ b/src/client/qt/windows/CMakeLists.txt
@@ -1,14 +1,14 @@
 target_sources(taller_client
         PRIVATE
         # .cpp files
-        lobby_window.cpp
-        create_game_dialog.cpp
-        car_selection_dialog.cpp
-        waiting_room_widget.cpp
+        creating_window.cpp
+        searching_window.cpp
+        selecting_window.cpp
+        waiting_window.cpp
         PUBLIC
         # .h files
-        lobby_window.h
-        create_game_dialog.h
-        car_selection_dialog.h
-        waiting_room_widget.h
+        creating_window.h
+        searching_window.h
+        selecting_window.h
+        waiting_window.h
 )
