replanteado la interfaz por la cual se hacen peticiones
Ahora cada ventana tiene su "Requester" o "api", declarando claramente las peticiones que realiza

Adicionalmente se cambió el nombre de ConnexionController a Connexion, dejando el código menos verboso

--- a/src/client/connexion/CMakeLists.txt
+++ b/src/client/connexion/CMakeLists.txt
@@ -1,20 +1,17 @@
 add_subdirectory(controllers)
+add_subdirectory(requesters)
 
 target_sources(taller_client
         PRIVATE
         # .cpp files
-        mock_connexion_controller.cpp
-        connexion_controller.cpp
+        connexion.cpp
         receiver.cpp
         sender.cpp
         response_controller.cpp
-        request_controller.cpp
         PUBLIC
         # .h files
-        mock_connexion_controller.h
-        connexion_controller.h
+        connexion.h
         receiver.h
         sender.h
         response_controller.h
-        request_controller.h
 )
