cambio de nombres en el servidor
Para que esté más parecido al cliente y para que no haya ambigüedad con lobby, se cambio los nombres de lobby a session y session a search

--- a/src/common/dto/CMakeLists.txt
+++ b/src/common/dto/CMakeLists.txt
@@ -1,10 +1,10 @@
 target_sources(taller_common
         PRIVATE
         dto.cpp
-        dto_lobby.cpp
+        dto_search.cpp
         dto_session.cpp
         PUBLIC
         dto.h
-        dto_lobby.h
+        dto_search.h
         dto_session.h
 )
