--- a/src/server/session/model/CMakeLists.txt
+++ b/src/server/session/model/CMakeLists.txt
@@ -4,10 +4,10 @@ target_sources(taller_server
         Car.h
         Checkpoint.h
         Hint.h
-        Map.h
         NpcCar.h
         Player.h
         Track.h
         Wall.h
         CarType.h
+        Entity.h
 )
