--- a/assets/liberty_city_circuito1.yaml
+++ b/assets/liberty_city_circuito1.yaml
@@ -10,7 +10,7 @@ map:
     - { id: 4, x: 100, y: 0, w: 2, h: 50 }
 
   bridges:
-    - { id: 10, x: 40, y: 25, w: 20, h: 1, driveable: true }
+    - { id: 10, x: 40, y: 25, w: 20, h: 1, driveable: false}
 
   checkpoints:
     - { id: 100, x: 10, y: 5, w: 12, h: 2, angle: 0.0, order: 1 }
