--- a/assets/config.yaml
+++ b/assets/config.yaml
@@ -39,7 +39,7 @@ car_types:
     width: 1.8
     height: 1.5
     description: "Rápido pero frágil"
-    max_speed: 22 # m/s
+    max_speed: 22 #m/s
     acceleration: 60 #m/s^2
     control: 0.9
     health: 80
@@ -68,6 +68,8 @@ car_types:
     density: 1.5
     friction: 0.9
     restitution: 0.05
+    linear_damping: 0.9
+    angular_damping: 5.0
 
   - name: "Drifter"
     width: 1.4
@@ -136,7 +138,11 @@ car_types:
     nitro_multiplier: 2.0
     nitro_duration: 2
     nitro_cooldown: 4
+    density: 0.9
+    friction: 0.8
     restitution: 0.25
+    linear_damping: 0.9
+    angular_damping: 5.0
 # CIUDADES Y SUS CIRCUITOS (referencias a YAMLs de mapa, lo que generaria el editor)
 
 cities:
