--- a/assets/liberty_city_circuito2.yaml
+++ b/assets/liberty_city_circuito2.yaml
@@ -3,20 +3,26 @@ map:
   gravity: [0.0, 0.0]
   city: "LibertyCity"
 
+  # --- Muro rectangular (120x60 metros) ---
   walls:
-    - { id: 1, x: 0, y: 0, w: 120, h: 2 }
-    - { id: 2, x: 0, y: 60, w: 120, h: 2 }
+    - { id: 4, x: 80, y: 20, w: 2, h: 40 }
 
+  # --- Checkpoints dentro ---
   checkpoints:
-    - { id: 110, x: 10, y: 10, w: 12, h: 2, order: 1 }
-    - { id: 111, x: 60, y: 30, w: 12, h: 2, order: 2 }
-    - { id: 112, x: 110, y: 10, w: 12, h: 2, order: 3 }
+    - { id: 110, x: 10, y: 10, w: 12, h: 2, angle: 0.0, order: 0}
+    - { id: 111, x: 40, y: 10, w: 12, h: 2, angle: 0.0, order: 1}
 
-
+  # --- Hints de decoración fuera del cuadrilátero ---
   hints:
-    - { id: 210, x: 35, y: 20, angle: 0.0 }
-    - { id: 211, x: 85, y: 15, angle: 0.1 }
+    - { id: 210, x: -10, y: 15, angle: 0.0 }
+    - { id: 211, x: 130, y: 15, angle: 0.0 }
 
+  # --- Puentes afuera (solo render) ---
+  bridges:
+    - { id: 310, x: -15, y: 30, w: 10, h: 3, angle: 0.0, driveable: false }
+    - { id: 311, x: 135, y: 30, w: 10, h: 3, angle: 0.0, driveable: true }
+
+  # --- Dos spawn points dentro del cuadrilátero ---
   spawn_points:
-    - { x: 5, y: 5, angle: 0.0 }
-    - { x: 2, y: 5, angle: 0.0 }
+    - { x: 5, y: 15, angle: 0.0 }   # Player 1
+    - { x: 250, y: 100, angle: 0.0 }   # Player 2
