refactor(MockApi): todo lo de prueba se paso a una clase
Se dejo en Car y en Game únicamente lo que, luego de la conexion con el server, se va a usar

Se ajustaron los valores de prueba
Se agrego funcionalidad de nitro

--- a/src/client/game/CMakeLists.txt
+++ b/src/client/game/CMakeLists.txt
@@ -6,6 +6,7 @@ target_sources(taller_client
         sdl_app.cpp
         assets.cpp
         car.cpp
+        mock_api.cpp
         PUBLIC
         # .h files
         game.h
@@ -13,4 +14,5 @@ target_sources(taller_client
         sdl_app.h
         assets.h
         car.h
+        mock_api.h
 )
