--- a/assets/liberty_city_circuito3.yaml
+++ b/assets/liberty_city_circuito3.yaml
@@ -8,9 +8,12 @@ map:
     - { id: 2, x: 0, y: 40, w: 80, h: 2 }
 
   checkpoints:
-    - { id: 120, x: 5, y: 5, w: 12, h: 2, order: 1 }
-    - { id: 121, x: 40, y: 20, w: 12, h: 2, order: 2 }
-    - { id: 122, x: 75, y: 5, w: 12, h: 2, order: 3 }
+    - { id: 120, x: 5, y: 5, w: 12, h: 2, angle: 0.0, order: 1 }
+    - { id: 121, x: 40, y: 20, w: 12, h: 2, angle: 0.0, order: 2 }
+    - { id: 122, x: 75, y: 5, w: 12, h: 2, angle: 0.0, order: 3 }
+
+  bridges:
+    - { id: 10, x: 40, y: 25, w: 20, h: 1, driveable: false}
 
   hints:
     - { id: 220, x: 20, y: 10, angle: 0.1 }
