refactor(protocol): todos las estructuras se serializan en common/dto/structs_serializable.h/.cpp

--- a/CPPLINT.cfg
+++ b/CPPLINT.cfg
@@ -1,2 +1,2 @@
 set noparent
-filter=-legal/copyright, -readability/alt_tokens, -whitespace/indent, -runtime/references, -build/c++11, -build/include_order
+filter=-legal/copyright, -readability/alt_tokens, -whitespace/indent, -runtime/references, -build/c++11, -build/include_order, -build/namespaces
