--- a/src/common/dto/CMakeLists.txt
+++ b/src/common/dto/CMakeLists.txt
@@ -4,9 +4,11 @@ target_sources(taller_common
         dto_search.cpp
         dto_session.cpp
         dto_game.cpp
+        structs_serializable.cpp
         PUBLIC
         dto.h
         dto_search.h
         dto_session.h
         dto_game.h
+        structs_serializable.h
 )
