reorganizacion de carpetas main

--- a/src/editor/CMakeLists.txt
+++ b/src/editor/CMakeLists.txt
@@ -1,7 +1,7 @@
-target_sources(taller_client
+target_sources(taller_editor
     PRIVATE
     # .cpp files
-    main.cpp
+        main.cpp
     PUBLIC
     # .h files
     )
