feat(TimerIterator): implementacion de la clase que duerme el hilo en intervalos constantes
La clase, en common/timer_iterator.h, tiene documentacion sobre como son sus metodos

Se utilizó la clase tanto en el gameloop del server como en el del cliente
aunque se utilizó un valor constante de fps hardcodeado en el codigo.
Luego se tendrá que mover a un archivo de constantes.

--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -6,6 +6,7 @@ target_sources(taller_common
         resolver.cpp
         resolvererror.cpp
         socket.cpp
+        timer_iterator.cpp
         PUBLIC
         buffer.h
         emitter.h
@@ -16,4 +17,5 @@ target_sources(taller_common
         resolvererror.h
         socket.h
         thread.h
+        timer_iterator.h
 )
