--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -2,6 +2,7 @@ target_sources(taller_tests
         PRIVATE
         # .cpp files
         protocolo_core.cpp
+        timer_interval_tests.cpp
         PUBLIC
         # .h files
 )
