Feat(ui): mostrar PNG de coches en la sala de espera y centralizar carga de imágenes
- Mostrar PNG del coche en WaitingWindow.
- Extraer la lógica de obtención/normalización de rutas de imagen a car_assets (evita duplicación).
- Actualizar CMakeLists para incluir el nuevo archivo implementado.

--- a/src/client/qt/windows/CMakeLists.txt
+++ b/src/client/qt/windows/CMakeLists.txt
@@ -5,10 +5,12 @@ target_sources(taller_client
         searching_window.cpp
         selecting_window.cpp
         waiting_window.cpp
+        car_assets.cpp
         PUBLIC
         # .h files
         creating_window.h
         searching_window.h
         selecting_window.h
         waiting_window.h
+        car_assets.h
 )
