bridge system implemented, offline mode working

--- a/assets/liberty_city_circuito3.yaml
+++ b/assets/liberty_city_circuito3.yaml
@@ -1,23 +1,102 @@
 map:
   name: "Liberty City - Circuito 3"
-  gravity: [0.0, 0.0]
   city: "LibertyCity"
+  gravity: [0, 0]
 
-  walls:
-    - { id: 1, x: 0, y: 0, w: 80, h: 2 }
-    - { id: 2, x: 0, y: 40, w: 80, h: 2 }
+  # ============================
+  # BUILDINGS (residential / rails / bridges / overpasses)
+  # ============================
+  buildings:
 
+    # --- Residential (bloque normal) ---
+    - type: residential
+      vertices:
+        - { x: 20, y: 20 }
+        - { x: 40, y: 20 }
+        - { x: 40, y: 40 }
+        - { x: 20, y: 40 }
+
+    - type: residential
+      vertices:
+        - { x: 100, y: 150 }
+        - { x: 130, y: 150 }
+        - { x: 130, y: 180 }
+        - { x: 100, y: 180 }
+
+    # --- Overpass (violeta – siempre arriba de autos) ---
+    - type: overpass
+      vertices:
+        - { x: 180, y: 60 }
+        - { x: 240, y: 60 }
+        - { x: 240, y: 80 }
+        - { x: 180, y: 80 }
+
+    # --- Overpass 2 (más grande) ---
+    - type: overpass
+      vertices:
+        - { x: 260, y: 140 }
+        - { x: 320, y: 140 }
+        - { x: 320, y: 170 }
+        - { x: 260, y: 170 }
+
+    # ============================
+    # BRIDGE TRANSITABLE (puente con barandas)
+    # ============================
+
+    - type: bridge
+      vertices:
+        - { x: 50, y: 50 }
+        - { x: 150, y: 50 }
+        - { x: 150, y: 65 }
+        - { x: 50, y: 65 }
+
+    # --- Rails izquierda ---
+    - type: railing
+      vertices:
+        - { x: 50, y: 50 }
+        - { x: 150, y: 50 }
+        - { x: 50, y: 52 }
+        - { x: 150, y: 52 }
+
+    # --- Rails derecha ---
+    - type: railing
+      vertices:
+        - { x: 50, y: 67 }
+        - { x: 50, y: 65 }
+        - { x: 150, y: 65 }
+        - { x: 150, y: 67 }
+
+
+  # ============================
+  # SENSORS (upper: pasa arriba – lower: pasa abajo)
+  # ============================
+  sensors:
+
+    # --- Puente principal (50..150, 50..65) ---
+
+    upper:
+      - { x: 50, y: 57, w: 6, h: 12 }     # izquierda lateral
+      - { x: 150, y: 57, w: 6, h: 12 }    # derecha lateral
+
+    lower:
+      - { x: 100, y: 50,  w: 40, h: 4 }   # arriba del puente
+      - { x: 100, y: 65,  w: 40, h: 4 }   # abajo del puente
+
+
+  # ============================
+  # CHECKPOINTS
+  # ============================
   checkpoints:
-    - { id: 120, x: 5, y: 5, w: 12, h: 2, angle: 0.0, order: 1 }
-    - { id: 121, x: 40, y: 20, w: 12, h: 2, angle: 0.0, order: 2 }
-    - { id: 122, x: 75, y: 5, w: 12, h: 2, angle: 0.0, order: 3 }
+    - { x: 30,  y:  50,  w: 10, h: 5, angle: 0.0, order: 0 }
+    - { x: 180, y:  70,  w: 14, h: 5, angle: 0.0, order: 1}
+    - { x: 280, y: 160,  w: 14, h: 5, angle: 0.0, order: 2}
+    - { x: 100, y: 120, w: 14, h: 5, angle: 0.0, order: 3 }
 
-  bridges:
-    - { id: 10, x: 40, y: 25, w: 20, h: 1, driveable: false}
 
-  hints:
-    - { id: 220, x: 20, y: 10, angle: 0.1 }
-    - { id: 221, x: 55, y: 10, angle: -0.2 }
-
+  # ============================
+  # SPAWN POINTS
+  # ============================
   spawn_points:
-    - { x: 3, y: 3, angle: 0.0 }
+    - { x: 20, y: 50, angle: 0 }
+    - { x: 22, y: 50, angle: 0 }
+    - { x: 24, y: 50, angle: 0 }
